crates/server/tests/analysis/snapshots/r#mod__analysis__alpha060__array_first_generic-2.snap
---
source: crates/server/tests/analysis/alpha060.rs
expression: "symbol_table.symbols.iter().map(|(_, symbol_info)|\nsymbol_info.to_string(&generic_types)).collect::<Vec<String>>()"
---
[
    "fun array_first(array: [Any]): Any?",
    "array: [Any]",
    "array: [Any]",
    "x: Int",
    "fun array_first(array: [Int]): Int?",
    "code: Int",
    "y: Int",
    "fun array_first(array: [Int]): Int?",
]
