crates/server/tests/analysis/snapshots/r#mod__analysis__alpha060__array_first_generic.snap
---
source: crates/server/tests/analysis/alpha060.rs
expression: symbol_table.symbols
---
{
    5..=16: SymbolInfo {
        name: "array_first",
        symbol_type: Function(
            FunctionSymbol {
                arguments: [
                    (
                        FunctionArgument {
                            name: "array",
                            data_type: Any,
                            is_optional: false,
                            default_value_type: None,
                            is_ref: false,
                        },
                        17..22,
                    ),
                ],
                is_public: false,
                compiler_flags: [],
                docs: None,
            },
        ),
        data_type: Any?,
        is_definition: true,
        undefined: false,
        span: 5..16,
        contexts: [],
    },
    17..=22: SymbolInfo {
        name: "array",
        symbol_type: Variable(
            VariableSymbol {
                is_const: false,
                is_public: false,
            },
        ),
        data_type: Any,
        is_definition: true,
        undefined: false,
        span: 17..22,
        contexts: [],
    },
    48..=53: SymbolInfo {
        name: "array",
        symbol_type: Variable(
            VariableSymbol {
                is_const: false,
                is_public: false,
            },
        ),
        data_type: Any,
        is_definition: false,
        undefined: false,
        span: 48..53,
        contexts: [
            Function(
                FunctionContext {
                    compiler_flags: [],
                },
            ),
        ],
    },
    64..=65: SymbolInfo {
        name: "x",
        symbol_type: Variable(
            VariableSymbol {
                is_const: false,
                is_public: false,
            },
        ),
        data_type: Int,
        is_definition: true,
        undefined: false,
        span: 64..65,
        contexts: [],
    },
    68..=79: SymbolInfo {
        name: "array_first",
        symbol_type: Function(
            FunctionSymbol {
                arguments: [
                    (
                        FunctionArgument {
                            name: "array",
                            data_type: [Int],
                            is_optional: false,
                            default_value_type: None,
                            is_ref: false,
                        },
                        80..87,
                    ),
                ],
                is_public: false,
                compiler_flags: [],
                docs: None,
            },
        ),
        data_type: Int?,
        is_definition: false,
        undefined: false,
        span: 68..79,
        contexts: [],
    },
    96..=100: SymbolInfo {
        name: "code",
        symbol_type: Variable(
            VariableSymbol {
                is_const: false,
                is_public: false,
            },
        ),
        data_type: Int,
        is_definition: true,
        undefined: false,
        span: 96..100,
        contexts: [],
    },
    109..=110: SymbolInfo {
        name: "y",
        symbol_type: Variable(
            VariableSymbol {
                is_const: false,
                is_public: false,
            },
        ),
        data_type: Int,
        is_definition: true,
        undefined: false,
        span: 109..110,
        contexts: [],
    },
    113..=124: SymbolInfo {
        name: "array_first",
        symbol_type: Function(
            FunctionSymbol {
                arguments: [
                    (
                        FunctionArgument {
                            name: "array",
                            data_type: [Int],
                            is_optional: false,
                            default_value_type: None,
                            is_ref: false,
                        },
                        125..132,
                    ),
                ],
                is_public: false,
                compiler_flags: [],
                docs: None,
            },
        ),
        data_type: Int?,
        is_definition: false,
        undefined: false,
        span: 113..124,
        contexts: [],
    },
}
