crates/server/tests/analysis/snapshots/r#mod__analysis__alpha060__array_index_set_const_error-3.snap
---
source: crates/server/tests/analysis/alpha060.rs
expression: backend.files.errors
---
{
    (
        FileId(
            0,
        ),
        FileVersion(
            1,
        ),
    ): [
        (
            "Cannot assign to a constant",
            23..26,
        ),
    ],
}
